<!--
  ~ Copyright 2017, 2018 Tensigma Ltd.
  ~
  ~ Licensed under the Microsoft Reference Source License (MS-RSL)
  ~
  ~ This license governs use of the accompanying software. If you use the software, you accept this license.
  ~ If you do not accept the license, do not use the software.
  ~
  ~ 1. Definitions
  ~ The terms "reproduce," "reproduction," and "distribution" have the same meaning here as under U.S. copyright law.
  ~ "You" means the licensee of the software.
  ~ "Your company" means the company you worked for when you downloaded the software.
  ~ "Reference use" means use of the software within your company as a reference, in read only form, for the sole purposes
  ~ of debugging your products, maintaining your products, or enhancing the interoperability of your products with the
  ~ software, and specifically excludes the right to distribute the software outside of your company.
  ~ "Licensed patents" means any Licensor patent claims which read directly on the software as distributed by the Licensor
  ~ under this license.
  ~
  ~ 2. Grant of Rights
  ~ (A) Copyright Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free copyright license to reproduce the software for reference use.
  ~ (B) Patent Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free patent license under licensed patents for reference use.
  ~
  ~ 3. Limitations
  ~ (A) No Trademark License- This license does not grant you any rights to use the Licensor’s name, logo, or trademarks.
  ~ (B) If you begin patent litigation against the Licensor over patents that you think may apply to the software
  ~ (including a cross-claim or counterclaim in a lawsuit), your license to the software ends automatically.
  ~ (C) The software is licensed "as-is." You bear the risk of using it. The Licensor gives no express warranties,
  ~ guarantees or conditions. You may have additional consumer rights under your local laws which this license cannot
  ~ change. To the extent permitted under your local laws, the Licensor excludes the implied warranties of merchantability,
  ~ fitness for a particular purpose and non-infringement.
  -->

<resources>
  <!--app-->
  <string name="app_name">Atlant Rent</string>

  <!--selected app-->
  <string name="selected_app_invest_title">Wallet</string>
  <string name="selected_app_invest_title2">Invest</string>
  <string name="selected_app_rent_title">P2P Rentals</string>
  <string name="selected_app_rent_title2">Rent</string>
  <string name="selected_app_trade_title">Exchange</string>
  <string name="selected_app_trade_title2">Trade</string>

  <!--main-->
  <string name="rent_welcome_text">Welcome to the first Blockchain-based Rental Platform</string>
  <string name="rent_welcome_text2">Available as a demo version of ATLANT Rentals scheduled for a future release</string>
  <string name="rent_main_title_choose_city">Most loved places</string>
  <string name="rent_main_title_choose_category">Choose yours</string>
  <string name="rent_main_category_traditions">Traditions</string>
  <string name="rent_main_category_most_exotic">The most exotic</string>
  <string name="rent_main_category_architecture">The most architecture</string>
  <string name="rent_main_category_hot">Hot</string>
  <string name="rent_main_category_weekend">Weekend</string>
  <string name="rent_main_per_night">Per night</string>
  <string name="rent_main_rooms">rooms</string>
  <string name="rent_main_beds">beds</string>
  <string name="rent_main_guests">guests</string>
  <string name="rent_main_bath">bath</string>
  <string name="rent_detail_bt_book_it">Book it now</string>
  <string name="rent_detail_dialog_message">Stay tuned with Twitter, Facebook, Medium or visit very special website\n…</string>
  <string name="rent_detail_dialog_bt">Continue in web</string>
  <string name="rent_description">Description</string>
  <string name="rent_amenities">Amenities</string>
  <string name="rent_amenities_tv">TV</string>
  <string name="rent_amenities_elevator">Elevator</string>
  <string name="rent_amenities_wifi">Wi-fi</string>
  <string name="rent_amenities_kitchen">Kitchen</string>
  <string name="rent_location">Location</string>
  <string name="rent_do_you_like_it">Do you like it?</string>

  <!--button-->
  <string name="bt_done">Done</string>
  <string name="bt_next">Next</string>
  <string name="bt_lets_start">Let\'s Start</string>
  <string name="bt_dialog_continue">Continue</string>
  <string name="bt_dialog_back">Close</string>
  <string name="bt_dialog_ok">OK</string>

  <!--system-->
  <string name="system_no_internet_connection">No internet connection</string>
  <string name="system_wallet_loading_error">Error loading data</string>
  <string name="system_timeout">Could not connect to the server, please try again later.</string>
  <string name="system_image">Image</string>
  <string name="system_section_in_development">Application in development</string>
  <string name="system_copyright">Copyright © Atlant.io, 2019</string>

</resources>
