<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017, 2018 Tensigma Ltd.
  ~
  ~ Licensed under the Microsoft Reference Source License (MS-RSL)
  ~
  ~ This license governs use of the accompanying software. If you use the software, you accept this license.
  ~ If you do not accept the license, do not use the software.
  ~
  ~ 1. Definitions
  ~ The terms "reproduce," "reproduction," and "distribution" have the same meaning here as under U.S. copyright law.
  ~ "You" means the licensee of the software.
  ~ "Your company" means the company you worked for when you downloaded the software.
  ~ "Reference use" means use of the software within your company as a reference, in read only form, for the sole purposes
  ~ of debugging your products, maintaining your products, or enhancing the interoperability of your products with the
  ~ software, and specifically excludes the right to distribute the software outside of your company.
  ~ "Licensed patents" means any Licensor patent claims which read directly on the software as distributed by the Licensor
  ~ under this license.
  ~
  ~ 2. Grant of Rights
  ~ (A) Copyright Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free copyright license to reproduce the software for reference use.
  ~ (B) Patent Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free patent license under licensed patents for reference use.
  ~
  ~ 3. Limitations
  ~ (A) No Trademark License- This license does not grant you any rights to use the Licensor’s name, logo, or trademarks.
  ~ (B) If you begin patent litigation against the Licensor over patents that you think may apply to the software
  ~ (including a cross-claim or counterclaim in a lawsuit), your license to the software ends automatically.
  ~ (C) The software is licensed "as-is." You bear the risk of using it. The Licensor gives no express warranties,
  ~ guarantees or conditions. You may have additional consumer rights under your local laws which this license cannot
  ~ change. To the extent permitted under your local laws, the Licensor excludes the implied warranties of merchantability,
  ~ fitness for a particular purpose and non-infringement.
  -->

<android.support.v4.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  android:scrollbars="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_title_margin"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-thin"
      android:gravity="center"
      android:text="@string/rent_main_title_choose_category"
      android:textColor="@color/colorPrimaryText"
      android:textSize="@dimen/text_size_18"/>

    <HorizontalScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_horizontal_margin_small"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
          android:id="@+id/main_bt_filter1"
          style="@style/RateCategoryButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rent_main_category_traditions"/>

        <Button
          android:id="@+id/main_bt_filter2"
          style="@style/RateCategoryButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rent_main_category_most_exotic"/>

        <Button
          android:id="@+id/main_bt_filter3"
          style="@style/RateCategoryButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rent_main_category_architecture"/>

        <Button
          android:id="@+id/main_bt_filter4"
          style="@style/RateCategoryButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rent_main_category_hot"/>

        <Button
          android:id="@+id/main_bt_filter5"
          style="@style/RateCategoryButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rent_main_category_weekend"/>

      </LinearLayout>

    </HorizontalScrollView>

    <android.support.v7.widget.RecyclerView
      android:id="@+id/main_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"/>

  </LinearLayout>

</android.support.v4.widget.NestedScrollView>