<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017, 2018 Tensigma Ltd.
  ~
  ~ Licensed under the Microsoft Reference Source License (MS-RSL)
  ~
  ~ This license governs use of the accompanying software. If you use the software, you accept this license.
  ~ If you do not accept the license, do not use the software.
  ~
  ~ 1. Definitions
  ~ The terms "reproduce," "reproduction," and "distribution" have the same meaning here as under U.S. copyright law.
  ~ "You" means the licensee of the software.
  ~ "Your company" means the company you worked for when you downloaded the software.
  ~ "Reference use" means use of the software within your company as a reference, in read only form, for the sole purposes
  ~ of debugging your products, maintaining your products, or enhancing the interoperability of your products with the
  ~ software, and specifically excludes the right to distribute the software outside of your company.
  ~ "Licensed patents" means any Licensor patent claims which read directly on the software as distributed by the Licensor
  ~ under this license.
  ~
  ~ 2. Grant of Rights
  ~ (A) Copyright Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free copyright license to reproduce the software for reference use.
  ~ (B) Patent Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free patent license under licensed patents for reference use.
  ~
  ~ 3. Limitations
  ~ (A) No Trademark License- This license does not grant you any rights to use the Licensor’s name, logo, or trademarks.
  ~ (B) If you begin patent litigation against the Licensor over patents that you think may apply to the software
  ~ (including a cross-claim or counterclaim in a lawsuit), your license to the software ends automatically.
  ~ (C) The software is licensed "as-is." You bear the risk of using it. The Licensor gives no express warranties,
  ~ guarantees or conditions. You may have additional consumer rights under your local laws which this license cannot
  ~ change. To the extent permitted under your local laws, the Licensor excludes the implied warranties of merchantability,
  ~ fitness for a particular purpose and non-infringement.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin2x"
  android:paddingBottom="@dimen/activity_vertical_margin2x"
  android:background="@color/dialog_rent_book_it_fon"
  android:gravity="center"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <include layout="@layout/view_name"/>

        </LinearLayout>

        <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
              android:id="@+id/dialog_book_it_message"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:fontFamily="sans-serif-thin"
              android:gravity="center_horizontal"
              android:text="@string/rent_detail_dialog_message"
              android:textColor="@color/colorPrimaryText"
              android:textSize="@dimen/text_size_32"/>

          </LinearLayout>

        </ScrollView>

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
          android:id="@+id/dialog_book_it_web"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin2x"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          android:text="@string/rent_detail_dialog_bt"/>

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/activity_vertical_margin4x"
          android:gravity="center">

          <LinearLayout
            android:id="@+id/dialog_book_it_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle_bt"
            android:gravity="center">

            <ImageView
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:contentDescription="@string/system_image"
              android:src="@mipmap/ic_arrows_left"/>

          </LinearLayout>

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin2x"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <include layout="@layout/view_copyright"/>

  </LinearLayout>

</LinearLayout>